feat(clean): #83 클린 아키텍쳐 적용

--- a/app/src/main/res/layout/fragment_love.xml
+++ b/app/src/main/res/layout/fragment_love.xml
@@ -5,7 +5,7 @@
     android:id="@+id/fragment_love"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.view.search.LoveFragment">
+    tools:context=".presentation.view.search.LoveFragment">
 
     <View
         android:id="@+id/love_top_v"
